# SwiftLLM

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: quick_5min.yaml  quick_5min_run.yaml  train_1p3b_h800_stage0.yaml  train_300m_3070.yaml  train_300m_3070_5min.yaml  train_300m_3070_5min_adamw_speed.yaml  train_300m_3070_5min_fast.yaml  train_300m_3070_5min_muon.yaml  train_300m_3070_5min_speed.yaml  train_300m_3070_adamw_5min_flash.yaml  train_300m_3070_adamw_5min_math.yaml  train_300m_3070_adamw_5min_true.yaml  train_300m_3070_fast.yaml  train_300m_a800_fast.yaml  train_300m_mem.yaml
docs/: H800_12M_ROADMAP.md  design_notes.md
scripts/: build_token_cache.py  chat_cli.py  chat_eval.py  chat_sft.py  compare_runs.py  download_climbmix.py  make_local_eval.py  make_sft_sample.py  sample.py  tok_eval.py  tok_train.py  train.py
src/swiftllm/: __init__.py  checkpoint.py  config.py  core_eval.py  data.py  dist.py  eval.py  metrics.py  model.py  tokenizer.py  train_loop.py
swiftllm/: __init__.py
