[project]
name = "swiftllm"
version = "0.1.0"
description = "A compact English-only LLM training stack for fast local experimentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "tokenizers>=0.20.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "pyarrow>=16.1.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
